Sync files from master branch